--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
-    "compilerOptions": {
-      "strict": true,
-      "exactOptionalPropertyTypes": true,
-      "noImplicitReturns": true,
-      "noUncheckedIndexedAccess": true,
-    },
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "_version": "2.0.0"
-  }
+  "compilerOptions": {
+    "strict": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
+    "isolatedModules": true,
+    "checkJs": true,
+  },
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "_version": "2.0.0"
+}
